@@ -13,16 +13,12 @@
 
 package org.eclipse.jetty.toolchain.test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 import static org.eclipse.jetty.toolchain.test.ExtraMatchers.ordered;
-import static org.eclipse.jetty.toolchain.test.ExtraMatchers.regex;
-import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.greaterThan;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @SuppressWarnings("javadoc")
@@ -31,56 +27,27 @@ public class ExtraMatchersTest
     @Test
     public void testOrderedFail()
     {
-        List<String> actual = Arrays.asList(new String[] { "avocado", "banana", "cherry" });
-        List<String> expected = Arrays.asList(new String[] { "apple", "banana", "cherry" });
+        List<String> actual = List.of("avocado", "banana", "cherry");
+        List<String> expected = List.of("apple", "banana", "cherry");
 
-        assertThrows(AssertionError.class, ()-> assertThat("Order", actual, ordered(expected)));
+        assertThrows(AssertionError.class, () -> assertThat("Order", actual, ordered(expected)));
     }
-    
+
     @Test
     public void testOrderedSuccess()
     {
-        List<String> actual = Arrays.asList(new String[] { "apple", "banana", "cherry" });
-        List<String> expected = Arrays.asList(new String[] { "apple", "banana", "cherry" });
-        
+        List<String> actual = List.of("apple", "banana", "cherry");
+        List<String> expected = List.of("apple", "banana", "cherry");
+
         assertThat("Order", actual, ordered(expected));
     }
-    
+
     @Test
     public void testOrderedMismatch()
     {
-        List<String> actual = Arrays.asList(new String[] { "banana", "apple", "cherry" });
-        List<String> expected = Arrays.asList(new String[] { "apple", "banana", "cherry" });
-        
-        assertThrows(AssertionError.class, ()-> assertThat("Order", actual, ordered(expected)));
-    }
+        List<String> actual = List.of("banana", "apple", "cherry");
+        List<String> expected = List.of("apple", "banana", "cherry");
 
-    @Test
-    public void testRegexMatch_Simple()
-    {
-        assertThat("Regex", "Apple Pie", regex("Apple.*"));
-        assertThat("Regex", "Cherry Pie", not(regex("Apple.*")));
-    }
-
-    @Test
-    public void testRegexMatch_Pattern()
-    {
-        assertThat("Regex", "Apple Pie", regex(".*p{2,}.*"));
-        assertThat("Regex", "Cherry Pie", not(regex(".*p{2,}.*")));
-    }
-
-    @Test
-    public void testRegexMatch_Pattern_Or()
-    {
-        assertThat("Regex", "Apple Pie", regex("^(Apple|Cherry).*"));
-        assertThat("Regex", "Cherry Pie", regex("^(Apple|Cherry).*"));
-        assertThat("Regex", "Blueberry Pie", not(regex("^(Apple|Cherry).*")));
-    }
-
-    @Test
-    public void testGreaterThan()
-    {
-        // Silly test ensures that existing hamcrest usage continues to work (re: junit 5 upgrade)
-        assertThat("Value", 100, greaterThan(50));
+        assertThrows(AssertionError.class, () -> assertThat("Order", actual, ordered(expected)));
     }
 }
